# hello-agent

./: .gitignore  README.md
ai_chef/: README.md  TASK.md  langgraph.json  main.py  pyproject.toml
ai_chef/app/: __init__.py  config.py  db.py  observability.py  schemas.py
ai_chef/app/agents/chef/: __init__.py  agent.py  memory.py  models.py  prompts.py  runner.py  tools.py
ai_chef/app/api/: routes.py
ai_chef/app/services/: chef.py  image.py  storage.py
ai_chef/app/static/: app.js  index.html  styles.css
ai_chef/tests/: test_run_agent.py
eino-smart-cs/: .env.example  go.mod  go.sum  main.go
eino-smart-cs/agent/: compliance_checker.go  knowledge_rag.go  llm.go  supervisor.go  ticket_handler.go  types.go
eino-smart-cs/api/: server.go
eino-smart-cs/config/: config.go
eino-smart-cs/memory/: knowledge.go  ticket.go  util.go  working.go
eino-smart-cs/tools/: knowledge_search.go  order_query.go  risk_check.go  ticket_create.go
photo-score/: README.md
photo-score/backend/: main.py  requirements.txt
photo-score/backend/api/: routes.py
photo-score/backend/core/: chains.py  models.py  prompts.py
photo-score/backend/features/: critique.py  multi_turn.py
photo-score/frontend/: index.html  package-lock.json  package.json
photo-score/frontend/src/: App.vue
qa-rag/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  resume-project-intro.md
qa-rag/app/: config.py  main.py
qa-rag/app/etl/: chunker.py
qa-rag/app/models/: __init__.py  (+1 more)
qa-rag/docs/: development-plan.md  project-knowledge-summary.md
(+10 files in other folders)
