[project]
name = "ai-chef"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "aliyun-python-sdk-sts>=3.1.2",
    "fastapi>=0.137.2",
    "langchain>=1.3.9",
    "langchain-deepseek>=1.1.0",
    "langchain-openai>=1.3.2",
    "langgraph-cli[inmem]>=0.4.10",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "oss2>=2.19.1",
    "openai>=2.43.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
